# ches

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  todo.txt
app/: CMakeLists.txt
app/src/: boardview.hpp  config.hpp  drawable.hpp  game.cpp  game.hpp  window.cpp  window.hpp
ches/: CMakeLists.txt
ches/src/: asset_manager.cpp  asset_manager.hpp  boardview.hpp  config.hpp  drawable.hpp  game.cpp  game.hpp  game.hpp.old  main.cpp  window.cpp  window.hpp
cheslib/: CMakeLists.txt
cheslib/include/cheslib/: array.hpp  attack_tables.hpp  board.hpp  ches_engine.hpp  ches_master.hpp  constants.hpp  engine.hpp  game_master.hpp  move.hpp  move_generator.hpp  move_list.hpp  position.hpp  state.hpp  types.hpp
cheslib/src/: attack_precompute.cpp  attack_precompute.hpp  attack_tables.cpp  attack_tables.hpp  attacks.cpp  attacks.hpp  engine.cpp  eval.cpp  eval.hpp  history.hpp  history_heuristic.cpp  history_heuristic.hpp  history_stack.cpp  history_stack.hpp  move.cpp  move_generation.cpp  move_generation.hpp  move_history.cpp  move_history.hpp  move_list.cpp  movegen.cpp  movegen.hpp  negamax.cpp  negamax.hpp  piece_bitboards.hpp  pieces.cpp  pieces.hpp  position.cpp  position.hpp  position_state.cpp  position_state.hpp  state.cpp  state.hpp  state_info.hpp  thread.cpp  thread.hpp  transposition.cpp  transposition.hpp  transposition_table.cpp  transposition_table.hpp  (+4 more)
cheslib/tests/: CMakeLists.txt  test_array.cpp  test_attack_tables.cpp  test_attacks.cpp  test_do_undo_move.cpp  test_move.cpp  test_move_generation.cpp  test_move_list.cpp  test_movegen.cpp  test_pieces.cpp  test_position.cpp  test_position_state.cpp  test_state.cpp  test_transposition.cpp  test_types.cpp  test_utils.cpp  test_zobrist.cpp
cheslib/tools/: CMakeLists.txt  find_magics.cpp
lib/: CMakeLists.txt
lib/cheslib/include/cheslib/: bitboard.hpp  board.hpp
lib/include/cheslib/: constants.hpp  gamestate.hpp  pieces.hpp  square.hpp
lib/src/: bitboard.cpp  board.cpp
src/: assetmanager.cpp  assetmanager.hpp  game.cpp  window.hpp
